--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="container">
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Hello world! This is HTML5 Boilerplate.</h1>
+                </div>
+            </div> <!-- End of Row 1 -->
         </div>
         <!-- end of content -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
